--- a/Windows/Shadowmask/Shadowmask.csproj
+++ b/Windows/Shadowmask/Shadowmask.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Window_API_Wrapper.cs" />
+    <Compile Include="TrayClient.cs" />
     <Compile Include="ConfigurationPane.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +115,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\StudioLogo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\StudioLogo.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
