--- a/Windows/Properties/Settings.settings
+++ b/Windows/Properties/Settings.settings
@@ -2,7 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Shadowmask.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="ThemeLayout" Type="System.Collections.Specialized.StringCollection" Scope="User">
+    <Setting Name="ThemeLayout" Roaming="true" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DefaultContent" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://plaza.one/</Value>
