Layed foundation for on-the-go wallpaper changes (live writing to settings file, reloading CEF browser w/ new content), added application icon, began cleaning up config pane.

--- a/Windows/Shadowmask.csproj
+++ b/Windows/Shadowmask.csproj
@@ -148,6 +148,12 @@
   <ItemGroup>
     <None Include="Resources\Spinner.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ApplicationLogo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Shadowmask_Icon_Minimal.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
