Cleaned up config pane code, added support for chrome url autocomplete, started MSI project.

--- a/Windows/packages.config
+++ b/Windows/packages.config
@@ -4,4 +4,9 @@
   <package id="cef.redist.x86" version="73.1.13" targetFramework="net46" />
   <package id="CefSharp.Common" version="73.1.130" targetFramework="net46" />
   <package id="CefSharp.WinForms" version="73.1.130" targetFramework="net46" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
+  <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net46" />
 </packages>
