Update default wallpaper & re-build MSI.

--- a/Windows/App.config
+++ b/Windows/App.config
@@ -13,7 +13,7 @@
   <applicationSettings>
     <Shadowmask.Properties.Settings>
       <setting name="DefaultContent" serializeAs="String">
-        <value>https://plaza.one/</value>
+        <value>https://properemergency.github.io/sites/shadowmask/default_wallpaper_theme.html</value>
       </setting>
     </Shadowmask.Properties.Settings>
   </applicationSettings>
